localization tr eng add

--- a/FlightTicketSalesSite/Resources/SharedResource.en-US.resx
+++ b/FlightTicketSalesSite/Resources/SharedResource.en-US.resx
@@ -117,8 +117,129 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="page.Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="AirplaneList" xml:space="preserve">
+    <value>Airplane List</value>
+  </data>
+  <data name="Card Holder Name" xml:space="preserve">
+    <value>Card Holder Name</value>
+  </data>
+  <data name="Card Number" xml:space="preserve">
+    <value>Card Number</value>
+  </data>
+  <data name="Cities" xml:space="preserve">
+    <value>Cities</value>
+  </data>
+  <data name="Continue" xml:space="preserve">
+    <value>Continue</value>
+  </data>
+  <data name="Cvc" xml:space="preserve">
+    <value>Cvc</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="E-Mail" xml:space="preserve">
+    <value>E-Mail</value>
+  </data>
+  <data name="Expiration Month" xml:space="preserve">
+    <value>Expiration Month</value>
+  </data>
+  <data name="Expiration Year" xml:space="preserve">
+    <value>Expiration Year</value>
+  </data>
+  <data name="First Name" xml:space="preserve">
+    <value>First Name</value>
+  </data>
+  <data name="From" xml:space="preserve">
+    <value>From</value>
+  </data>
+  <data name="From Where" xml:space="preserve">
+    <value>From Where</value>
+  </data>
+  <data name="Identity Number" xml:space="preserve">
+    <value>Identity Number</value>
+  </data>
+  <data name="Last Name" xml:space="preserve">
+    <value>Last Name</value>
+  </data>
+  <data name="Localization" xml:space="preserve">
+    <value>Localization</value>
+    <comment>"</comment>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
+  <data name="No found trips" xml:space="preserve">
+    <value>No trips found on the date you selected</value>
+  </data>
+  <data name="Passenger Info" xml:space="preserve">
+    <value>Passenger Info</value>
+  </data>
+  <data name="Passenger Information" xml:space="preserve">
+    <value>Passenger Information</value>
+  </data>
+  <data name="Phone Number" xml:space="preserve">
+    <value>Phone Number</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>Price</value>
+  </data>
+  <data name="Privacy" xml:space="preserve">
+    <value>Privacy</value>
+  </data>
+  <data name="privacy description" xml:space="preserve">
+    <value>Use this page to detail your site's privacy policy</value>
+  </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Privacy Policy</value>
+  </data>
+  <data name="Register" xml:space="preserve">
+    <value>Register</value>
+  </data>
+  <data name="Remember Me" xml:space="preserve">
+    <value>Remember Me</value>
+  </data>
+  <data name="Roles" xml:space="preserve">
+    <value>Roles</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="Search Trip" xml:space="preserve">
+    <value>Search Trip</value>
+  </data>
+  <data name="Seat Number" xml:space="preserve">
+    <value>Seat Number</value>
+  </data>
+  <data name="Select Trip" xml:space="preserve">
+    <value>Select Trip</value>
+  </data>
+  <data name="Ticket" xml:space="preserve">
+    <value>Ticket</value>
+  </data>
+  <data name="Tickets" xml:space="preserve">
+    <value>Tickets</value>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>Time</value>
+  </data>
+  <data name="To" xml:space="preserve">
+    <value>To</value>
+  </data>
+  <data name="To Where" xml:space="preserve">
+    <value>To Where</value>
+  </data>
+  <data name="Trip Information" xml:space="preserve">
+    <value>Trip Information</value>
+  </data>
+  <data name="Trips" xml:space="preserve">
+    <value>Trips</value>
+  </data>
+  <data name="Users" xml:space="preserve">
+    <value>Users</value>
   </data>
   <data name="Welcome" xml:space="preserve">
     <value>welcome</value>
