--- a/FlightTicketSalesSite/Resources/SharedResource.en-US.resx
+++ b/FlightTicketSalesSite/Resources/SharedResource.en-US.resx
@@ -132,6 +132,9 @@
   <data name="Continue" xml:space="preserve">
     <value>Continue</value>
   </data>
+  <data name="Create New Airplane" xml:space="preserve">
+    <value>Create New Airplane</value>
+  </data>
   <data name="Cvc" xml:space="preserve">
     <value>Cvc</value>
   </data>
@@ -205,6 +208,9 @@
   <data name="Roles" xml:space="preserve">
     <value>Roles</value>
   </data>
+  <data name="Save Changes" xml:space="preserve">
+    <value>Save Changes</value>
+  </data>
   <data name="Search" xml:space="preserve">
     <value>Search</value>
   </data>
@@ -213,6 +219,9 @@
   </data>
   <data name="Seat Number" xml:space="preserve">
     <value>Seat Number</value>
+  </data>
+  <data name="SeatCapacity" xml:space="preserve">
+    <value>Seat Capacity</value>
   </data>
   <data name="Select Trip" xml:space="preserve">
     <value>Select Trip</value>
@@ -238,8 +247,14 @@
   <data name="Trips" xml:space="preserve">
     <value>Trips</value>
   </data>
+  <data name="UserName" xml:space="preserve">
+    <value>User Name</value>
+  </data>
   <data name="Users" xml:space="preserve">
     <value>Users</value>
+  </data>
+  <data name="Warning!" xml:space="preserve">
+    <value>Warning!</value>
   </data>
   <data name="Welcome" xml:space="preserve">
     <value>welcome</value>
